--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -10,10 +10,20 @@
   --font-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Helvetica Neue', 'Arial', 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --font-title: 'Sitdown', var(--font-base);
+  --font-heading: 'Areno', var(--font-base);
+  --font-title: 'Areno Rough', var(--font-base);
 }
 
 @font-face {
-  font-family: 'Sitdown';
-  src: url('../assets/sitdown.otf') format('opentype');
+  font-weight: normal;
+  font-family: 'Areno';
+  src: url('../assets/areno.woff2') format('woff2'),
+    url('../assets/areno.woff') format('woff');
+}
+
+@font-face {
+  font-weight: normal;
+  font-family: 'Areno Rough';
+  src: url('../assets/areno-rough-subset.woff2') format('woff2'),
+    url('../assets/areno-rough-subset.woff') format('woff');
 }
