--- a/src/components/Sections.module.css
+++ b/src/components/Sections.module.css
@@ -1,6 +1,44 @@
-.heading {
-  composes: heading from global;
-  padding: 1rem 2rem;
-  color: white;
-  background-color: var(--minsk);
+.list {
+  margin-bottom: 0;
+  padding: 1.5rem 1.5rem 1rem 2.5rem;
+}
+
+.list > li {
+  margin-bottom: 0.5rem;
+}
+
+@media (width >= 30em) {
+  .list {
+    padding: 2rem 2rem 2rem 3rem;
+  }
+}
+@media (width >= 50em) {
+  .content {
+    display: flex;
+  }
+
+  .list,
+  .imgWrap {
+    flex: 1 1 0%;
+    min-width: 0;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-bottom: 2.25rem;
+  }
+
+  .list > li {
+    margin-bottom: 0;
+  }
+
+  .img {
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
+    object-fit: cover;
+    object-position: right;
+  }
 }
