--- a/src/components/Heading.module.css
+++ b/src/components/Heading.module.css
@@ -3,9 +3,10 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 0;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem 1.125rem;
   color: white;
   background-color: var(--minsk);
+  font-size: 2rem;
 }
 
 .title {
@@ -15,7 +16,7 @@
 .sub {
   margin-top: 0.25rem;
   color: var(--candlelight);
-  font-size: 75%;
+  font-size: 80%;
 }
 
 @media (width >= 30em) {
