--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -17,7 +17,7 @@
   margin: 0 -0.75rem;
 }
 
-.nav > a {
+.link {
   display: flex;
   flex: 1 1 auto;
   align-items: center;
@@ -28,6 +28,20 @@
   &:hover {
     text-decoration: underline;
   }
+
+  &[aria-hidden='true'] {
+    opacity: 0;
+  }
+
+  &:not(:last-child)::after {
+    content: '';
+    height: 1.5rem;
+    border-right: 2px solid var(--lochmara);
+  }
+}
+
+.falconLink {
+  composes: link;
 }
 
 .item {
@@ -36,10 +50,6 @@
   align-items: center;
   justify-content: center;
   padding: 0 0.25rem 0.25rem;
-}
-
-a:not(:last-child) .item {
-  border-right: 1px solid var(--lochmara);
 }
 
 @media (width >= 20em) {
@@ -62,8 +72,18 @@ a:not(:last-child) .item {
   }
 }
 
+@media (width < 60em) {
+  .falconLink {
+    display: none;
+  }
+}
+
 @media (width >= 80em) {
   .nav {
-    padding-left: 6rem;
+    padding-left: 2.5rem;
+  }
+
+  .falconLink {
+    margin-left: 1rem;
   }
 }
