--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,13 +1,10 @@
 .root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   padding: 1.5rem 1.5rem 2.25rem;
   border-top: 1.5rem solid var(--candlelight);
   font-size: 112.5%;
   text-align: center;
 }
 
-.chevron {
-  margin: 0 1rem -0.25em;
+.icon {
+  margin: 0 1rem -0.125em;
 }
