--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -17,6 +17,10 @@
 
   /* Stacking */
   --zi-nav: 1;
+
+  /* Misc */
+  --slant-width: 8rem; /* MAGIC NUMBER- adjust based on element height and skew angle */
+  --skew-angle: 12deg;
 }
 
 @font-face {
