--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -53,32 +53,16 @@
   text-transform: uppercase;
 }
 
-@media (width >= 80em) {
-  .slant {
-    position: relative;
-    overflow: hidden;
-  }
-
-  .slant::before {
-    position: absolute;
-    top: 0;
-    bottom: -1px; /* glitch */
-    background-color: var(--minsk);
-    width: calc(6rem + var(--slant-width));
-    transform: skew(var(--skew-angle));
-    content: '';
-  }
-
-  .slantLeft::before {
-    --skew-angle: 10deg;
-    left: calc(-1 * var(--slant-width));
-    border-left: var(--slant-width) solid var(--lochmara);
-    transform-origin: top;
-  }
-
-  .slantRight::before {
-    right: calc(-1 * var(--slant-width));
-    border-right: var(--slant-width) solid var(--lochmara);
-    transform-origin: bottom;
-  }
+.separator::before {
+  content: '';
+  display: block;
+  height: 1.5rem;
+  background: repeating-linear-gradient(
+    calc(85deg - var(--skew-angle)),
+    transparent -20px,
+    transparent 0,
+    currentColor 0,
+    currentColor calc(-20px + 2 * 20px)
+  );
+  color: var(--candlelight);
 }
