--- a/src/components/Sections.module.css
+++ b/src/components/Sections.module.css
@@ -19,6 +19,7 @@
     padding: 2rem;
   }
 }
+
 @media (width >= 50em) {
   .content {
     display: flex;
@@ -28,6 +29,7 @@
   .imgWrap {
     flex: 1 1 0%;
     min-width: 0;
+    min-height: 300px;
   }
 
   .list {
@@ -41,11 +43,12 @@
     margin-bottom: 0;
   }
 
+  .imgWrap {
+    max-width: 640px;
+    max-height: 360px;
+  }
+
   .img {
-    width: 100%;
     height: 100%;
-    min-height: 300px;
-    object-fit: cover;
-    object-position: right;
   }
 }
