--- a/src/components/Horaires.module.css
+++ b/src/components/Horaires.module.css
@@ -57,7 +57,8 @@
 .announcement {
   display: flex;
   align-items: center;
-  margin: 2.5rem 0 1.5rem;
+  /* margin: 2.5rem 0 1.5rem; */
+  margin: 1rem 0 1.5rem;
   padding: 1rem;
   background-color: var(--candlelight);
 }
@@ -133,7 +134,7 @@
   .content {
     position: relative;
     z-index: 0;
-    display: grid;
+    /* display: grid; */
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 1rem 2rem;
     padding: 1.5rem 2rem 0;
@@ -171,7 +172,7 @@
   .announcement {
     grid-column: 1 / span 5;
     grid-row: 14;
-    margin: 1.5rem 0 0;
+    /* margin: 1.5rem 0 0; */
   }
 
   .announcementIcon {
