--- a/src/components/Horaires.module.css
+++ b/src/components/Horaires.module.css
@@ -57,7 +57,7 @@
 .announcement {
   display: flex;
   align-items: center;
-  /* margin: 2.5rem 0 1.5rem; */
+  margin: 2.5rem 0 1.5rem;
   margin: 1rem 0 1.5rem;
   padding: 1rem;
   background-color: var(--candlelight);
@@ -134,8 +134,9 @@
   .content {
     position: relative;
     z-index: 0;
-    /* display: grid; */
-    grid-template-columns: repeat(5, 1fr);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(30px, auto);
     grid-gap: 1rem 2rem;
     padding: 1.5rem 2rem 0;
   }
@@ -162,17 +163,17 @@
   }
 
   .midday {
-    grid-column: 1 / span 5;
-    grid-row: 7;
+    grid-column: 1 / span 3;
+    grid-row: 6;
     height: 1.5rem;
     z-index: -1;
     background-color: var(--lochmara);
   }
 
   .announcement {
-    grid-column: 1 / span 5;
+    grid-column: 1 / span 3;
     grid-row: 14;
-    /* margin: 1.5rem 0 0; */
+    margin: 1.5rem 0 0;
   }
 
   .announcementIcon {
