--- a/src/components/Horaires.module.css
+++ b/src/components/Horaires.module.css
@@ -1,6 +1,9 @@
 .root {
   composes: separator from global;
   background-color: var(--minsk);
+
+  --cols: 4;
+  --rows: 21;
 }
 
 .inner {
@@ -22,6 +25,10 @@
   background-color: #fff;
   border-radius: 0.25rem;
   text-align: center;
+}
+
+.entry[data-variant='summer'] {
+  border: 6px solid var(--candlelight);
 }
 
 .time {
@@ -58,7 +65,6 @@
   display: flex;
   align-items: center;
   margin: 2.5rem 0 1.5rem;
-  margin: 1rem 0 1.5rem;
   padding: 1rem;
   background-color: var(--candlelight);
 }
@@ -109,6 +115,10 @@
     padding-right: 1.5rem;
   }
 
+  .dayBorder {
+    display: none;
+  }
+
   .time,
   .locationLink {
     font-size: 100%;
@@ -134,11 +144,14 @@
   .content {
     position: relative;
     z-index: 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(30px, auto);
-    grid-gap: 1rem 2rem;
     padding: 1.5rem 2rem 0;
+  }
+
+  .contentInner {
+    display: grid;
+    grid-template-columns: repeat(var(--cols), 1fr);
+    grid-auto-rows: minmax(1.5rem, auto);
+    grid-gap: 1rem 2rem;
   }
 
   .day {
@@ -147,14 +160,17 @@
   }
 
   .dayBorder {
-    border-left: 2px solid white;
+    grid-row: 1 / span var(--rows);
     margin-left: -1rem;
+    border-left: 2px solid white;
   }
 
   .entry {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .time,
@@ -163,16 +179,13 @@
   }
 
   .midday {
-    grid-column: 1 / span 3;
-    grid-row: 6;
-    height: 1.5rem;
+    grid-column: 1 / span var(--cols);
+    grid-row: 7;
     z-index: -1;
     background-color: var(--lochmara);
   }
 
   .announcement {
-    grid-column: 1 / span 3;
-    grid-row: 14;
     margin: 1.5rem 0 0;
   }
 
