--- a/src/components/Horaires.module.css
+++ b/src/components/Horaires.module.css
@@ -22,9 +22,9 @@
 
 .entry {
   padding: 1rem 0.5rem;
-  background-color: #fff;
-  border-radius: 0.25rem;
   text-align: center;
+  background-color: white;
+  border-radius: 0.25rem;
 }
 
 .entry[data-variant='summer'] {
@@ -34,8 +34,8 @@
 .time {
   display: flex;
   color: var(--lochmara);
-  font-size: 90%;
   font-weight: bold;
+  font-size: 90%;
 }
 
 .time > span {
@@ -45,16 +45,16 @@
 .section {
   display: block;
   margin-top: -0.125rem;
-  font-size: 115%;
   font-weight: 600;
+  font-size: 115%;
 }
 
 .locationLink {
   composes: link-reset from global;
   display: flex;
   align-items: center;
-  font-size: 90%;
   margin-bottom: 0.125rem;
+  font-size: 90%;
 }
 
 .externalIcon {
@@ -85,8 +85,8 @@
 
 @media (width >= 30em) {
   .content {
-    padding-left: 2rem;
     padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
 
@@ -97,22 +97,22 @@
 }
 
 @media (width < 65em) {
-  .day:not(:first-child) {
-    margin-top: 1.5rem;
-  }
-
   .day,
   .entry {
     margin-bottom: 1rem;
   }
 
+  .day:not(:first-child) {
+    margin-top: 1.5rem;
+  }
+
   .entry {
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
+    align-items: center;
     max-width: 30em;
-    padding-left: 1.5rem;
     padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
 
   .dayBorder {
@@ -149,9 +149,9 @@
 
   .contentInner {
     display: grid;
-    grid-template-columns: repeat(var(--cols), 1fr);
     grid-auto-rows: minmax(1.5rem, auto);
     grid-gap: 1rem 2rem;
+    grid-template-columns: repeat(var(--cols), 1fr);
   }
 
   .day {
@@ -179,8 +179,8 @@
   }
 
   .midday {
-    grid-column: 1 / span var(--cols);
     z-index: -1;
+    grid-column: 1 / span var(--cols);
     background-color: var(--lochmara);
   }
 
