Update fight fitness time and remove summer fitness

--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -24,6 +24,7 @@
   color: inherit;
   line-height: 1;
   text-decoration: none;
+  outline-offset: -6px;
 
   &:hover {
     text-decoration: underline;
