--- a/src/components/Horaires.module.css
+++ b/src/components/Horaires.module.css
@@ -2,8 +2,8 @@
   composes: separator from global;
   background-color: var(--minsk);
 
-  --cols: 4;
-  --rows: 21;
+  --cols: 5;
+  --rows: 23;
 }
 
 .inner {
@@ -21,10 +21,19 @@
 }
 
 .entry {
+  composes: link-reset from global;
   padding: 1rem 0.5rem;
   text-align: center;
   background-color: white;
   border-radius: 0.25rem;
+  outline-offset: 4px;
+  outline-color: white;
+}
+
+.entry:hover,
+.entry:focus {
+  color: inherit;
+  text-decoration: none;
 }
 
 .entry[data-variant='summer'] {
@@ -49,16 +58,25 @@
   font-size: 115%;
 }
 
-.locationLink {
-  composes: link-reset from global;
+.location {
   display: flex;
-  align-items: center;
   margin-bottom: 0.125rem;
   font-size: 90%;
 }
 
+.entry:hover .location {
+  color: var(--minsk);
+  text-decoration: underline;
+}
+
 .externalIcon {
   margin-left: 0.5rem;
+  opacity: 0.5;
+}
+
+.entry:hover .externalIcon,
+.entry:focus .externalIcon {
+  opacity: 1;
 }
 
 .announcement {
@@ -91,7 +109,7 @@
 }
 
 @media (width < 35em) {
-  .locationLink {
+  .location {
     flex-basis: 100%;
   }
 }
@@ -104,6 +122,10 @@
 
   .day:not(:first-child) {
     margin-top: 1.5rem;
+  }
+
+  .day[data-empty='true'] {
+    display: none;
   }
 
   .entry {
@@ -120,7 +142,7 @@
   }
 
   .time,
-  .locationLink {
+  .location {
     font-size: 100%;
   }
 
@@ -166,6 +188,7 @@
   }
 
   .entry {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -174,8 +197,15 @@
   }
 
   .time,
-  .locationLink {
+  .location {
     justify-content: center;
+  }
+
+  .externalIcon {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    font-size: 80%;
   }
 
   .midday {
