--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -51,13 +51,13 @@ img {
 }
 
 a {
-  color: #0d6efd;
+  color: var(--minsk);
   font-weight: 600;
   outline-color: currentColor;
 
   &:hover,
   &:focus {
-    color: var(--minsk);
+    color: var(--lochmara);
     text-decoration: none;
   }
 }
