--- a/src/components/Cotisation.module.css
+++ b/src/components/Cotisation.module.css
@@ -1,10 +1,5 @@
 .root {
   composes: separator from global;
-  background-color: var(--minsk);
-}
-
-.inner {
-  padding: 1rem 0 2rem;
 }
 
 .content {
@@ -22,15 +17,15 @@
 .fees > p {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1rem;
-  padding: 1.5rem 1.5rem 1rem 2rem;
+  margin-bottom: 0.75rem;
+  padding: 1.25rem 1.5rem 1rem 1.5rem;
   background-color: black;
 }
 
 .age {
   composes: heading from global;
   color: var(--candlelight);
-  font-size: 180%;
+  font-size: 160%;
 }
 
 .price {
@@ -54,7 +49,7 @@
   flex-direction: column;
   justify-content: center;
   margin-bottom: 1rem;
-  padding: 1rem 1rem 1rem 3rem;
+  padding: 1.5rem;
   list-style: none;
   background-color: white;
 }
@@ -78,7 +73,19 @@
   margin-bottom: 1.5rem;
 }
 
-@media (45em <= width < 60em) {
+@media (width >= 30em) {
+  .age {
+    font-size: 180%;
+  }
+}
+
+@media (45em <= width < 65em) {
+  .root {
+    max-width: 45em;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .fees > p {
     flex-direction: row;
     align-items: flex-end;
@@ -93,14 +100,29 @@
     flex: none;
     text-align: right;
   }
+
+  .list {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
-@media (width >= 60em) {
+@media (width >= 65em) {
+  .root {
+    background-color: var(--minsk);
+  }
+
+  .inner {
+    padding: 1rem 0 2rem;
+  }
+
   .content {
     display: flex;
+    padding: 1rem 1rem 0;
   }
 
   .fees {
+    flex-grow: 2;
     padding: 1rem 0;
   }
 
@@ -114,18 +136,21 @@
   }
 
   .list {
+    flex-grow: 3;
     margin-bottom: 0;
   }
 }
 
-@media (width >= 65em) {
+@media (width >= 70em) {
   .inner {
-    max-width: 75rem;
-    margin: 0 auto;
-    padding: 2rem 0 4rem;
+    padding: 1rem 0 3rem;
   }
 
   .content {
     padding: 2rem 2rem 0;
+  }
+
+  .fees {
+    padding: 1rem 0;
   }
 }
