--- a/src/components/Heading.module.css
+++ b/src/components/Heading.module.css
@@ -5,7 +5,7 @@
   margin-bottom: 0;
   padding: 1rem 1.5rem 1.125rem;
   color: white;
-  font-size: 2rem;
+  font-size: 1.75em;
   background-color: var(--minsk);
 }
 
@@ -22,6 +22,7 @@
 @media (width >= 30em) {
   .heading {
     padding: 1rem 2rem;
+    font-size: 2em;
   }
 }
 
