--- a/src/components/Inscription.module.css
+++ b/src/components/Inscription.module.css
@@ -1,11 +1,14 @@
 .root {
   composes: separator from global;
-  overflow: hidden;
+  max-width: 45em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.inner {
-  max-width: 45em;
+.sections {
   padding: 0 1.5rem 1.125rem;
+  background-color: white;
+  overflow: hidden;
 }
 
 .section > h3 {
@@ -20,21 +23,24 @@
 }
 
 @media (width >= 30em) {
-  .inner {
+  .setions {
     padding: 0 2rem 1rem;
   }
 }
 
 @media (width >= 80em) {
-  .inner {
-    display: flex;
+  .root {
     max-width: none;
+  }
+
+  .sections {
+    display: flex;
     margin: 0 -1.5rem;
   }
 
   .section {
     flex: 2 1 0%;
-    padding: 0 1.5rem;
+    padding: 0 1.5rem 1rem;
   }
 
   .section:last-child {
