--- a/src/components/Horaires.module.css
+++ b/src/components/Horaires.module.css
@@ -60,9 +60,10 @@
 
 .section {
   display: block;
-  margin-top: -0.125rem;
   font-weight: 600;
   font-size: 115%;
+  margin-bottom: 0.125rem;
+  line-height: 1.3;
 }
 
 .location {
