Upgrade Stylelint and Prettier

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -53,7 +53,7 @@ img {
 a {
   color: var(--minsk);
   font-weight: 600;
-  outline-color: currentColor;
+  outline-color: currentcolor;
 
   &:hover,
   &:focus {
