--- a/src/components/Inscription.module.css
+++ b/src/components/Inscription.module.css
@@ -16,10 +16,52 @@
   color: var(--lochmara);
 }
 
+.section > h4 {
+  margin-top: 2rem;
+  color: var(--lochmara);
+}
+
 .extra {
   display: block;
   margin-bottom: 0.25rem;
   line-height: 1.4;
+}
+
+.statusOk {
+  color: darkgreen;
+}
+
+.actionBlock {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  border-left: 0.5rem solid var(--candlelight);
+}
+
+.preRegisterBtn {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  color: white;
+  text-decoration: none;
+  background-color: var(--lochmara);
+  border-radius: 0.5rem;
+}
+
+.preRegisterBtn:hover {
+  color: white;
+  background-color: var(--minsk);
+}
+
+.preRegisterBtn:focus {
+  color: white;
+  outline-offset: 3px;
+}
+
+.preRegisterIcon {
+  margin-right: 0.5em;
+  margin-bottom: -2px;
 }
 
 @media (width >= 30em) {
@@ -39,11 +81,7 @@
   }
 
   .section {
-    flex: 2 1 0%;
+    flex: 1 1 0%;
     padding: 0 1.5rem 1rem;
-  }
-
-  .section:last-child {
-    flex-grow: 3;
   }
 }
